fix: Align header logo and text vertically
- Add display: flex and align-items: center to .title
- Use gap: 3px instead of margin-right for spacing
- Remove margin-bottom: -1px from .logo
- Add vertical-align: middle to .logo
- Logo and "Voice Clock" text now aligned on same baseline

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,15 +32,18 @@
 		font-weight: bold;
 		color: rgb(173, 173, 173);
 		pointer-events: none;
+		display: flex;
+		align-items: center;
+		gap: 3px;
 	}
 
 	.title i {
-		margin-right: 3px;
+		margin-right: 0;
 	}
 
 	.logo {
-		margin-bottom: -1px;
 		display: inline-block;
+		vertical-align: middle;
 	}
 
 	.btnWindow {
